--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/assets/Interface=Desktop\,\ Theme=Dark\ mode.jpg);
+    background-image: url(./assets/Interface=Desktop\,\ Theme=Dark\ mode.jpg);
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
